--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -27,6 +27,15 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <includes>
+                        <include>*Behavior</include>
+                    </includes>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -41,11 +50,6 @@
         <dependency>
             <groupId>com.github.t1</groupId>
             <artifactId>jax-rs-problem-detail-api</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.t1</groupId>
-            <artifactId>jax-rs-problem-detail-ri-lib</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
