--- a/api/pom.xml
+++ b/api/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.t1</groupId>
-    <artifactId>jax-rs-problem-detail-api</artifactId>
+    <artifactId>problem-detail-api</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <description>Problem Detail API</description>
 
