--- a/ri-spring/pom.xml
+++ b/ri-spring/pom.xml
@@ -13,7 +13,7 @@
     </parent>
 
     <groupId>com.github.t1</groupId>
-    <artifactId>jax-rs-problem-detail-ri-spring</artifactId>
+    <artifactId>problem-detail-ri-spring</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <description>Problem Detail implementation for Spring Boot</description>
 
@@ -54,12 +54,12 @@
 
         <dependency>
             <groupId>com.github.t1</groupId>
-            <artifactId>jax-rs-problem-detail-api</artifactId>
+            <artifactId>problem-detail-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.t1</groupId>
-            <artifactId>jax-rs-problem-detail-ri-lib</artifactId>
+            <artifactId>problem-detail-ri-lib</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
