--- a/ri/pom.xml
+++ b/ri/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.t1</groupId>
-    <artifactId>jax-rs-problem-detail-ri</artifactId>
+    <artifactId>problem-detail-ri</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <description>A dummy implementation using an ExceptionMapper, i.e. an incomplete implementation</description>
 
@@ -79,12 +79,12 @@
 
         <dependency>
             <groupId>com.github.t1</groupId>
-            <artifactId>jax-rs-problem-detail-api</artifactId>
+            <artifactId>problem-detail-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.t1</groupId>
-            <artifactId>jax-rs-problem-detail-ri-lib</artifactId>
+            <artifactId>problem-detail-ri-lib</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
