--- a/test-spring/pom.xml
+++ b/test-spring/pom.xml
@@ -13,7 +13,7 @@
     </parent>
 
     <groupId>com.github.t1</groupId>
-    <artifactId>problem-detail-spring-test</artifactId>
+    <artifactId>problem-details-spring-test</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <description>Problem Detail test suite for Spring Boot</description>
 
@@ -62,12 +62,12 @@
 
         <dependency>
             <groupId>com.github.t1</groupId>
-            <artifactId>problem-detail-api</artifactId>
+            <artifactId>problem-details-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.t1</groupId>
-            <artifactId>problem-detail-ri-spring</artifactId>
+            <artifactId>problem-details-ri-spring</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
