--- a/test/pom.xml
+++ b/test/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.t1</groupId>
-    <artifactId>problem-detail-test</artifactId>
+    <artifactId>problem-details-test</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <description>Problem Detail test suite for JAX-RS</description>
@@ -93,12 +93,12 @@
 
         <dependency>
             <groupId>com.github.t1</groupId>
-            <artifactId>problem-detail-api</artifactId>
+            <artifactId>problem-details-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.t1</groupId>
-            <artifactId>problem-detail-ri</artifactId>
+            <artifactId>problem-details-ri</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
@@ -159,7 +159,7 @@
         <dependency>
             <groupId>com.github.t1</groupId>
             <artifactId>jee-testcontainers</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
