--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,34 @@
 
     <repositories>
         <repository>
+            <id>bintray</id>
+            <name>bintray</name>
+            <url>http://jcenter.bintray.com</url>
+        </repository>
+        <repository>
             <id>bintray-t1-javaee-helpers</id>
             <name>bintray</name>
             <url>https://dl.bintray.com/t1/javaee-helpers</url>
         </repository>
     </repositories>
+    <distributionManagement>
+        <repository>
+            <id>bintray-t1-javaee-helpers</id>
+            <name>t1-javaee-helpers</name>
+            <url>https://api.bintray.com/maven/t1/javaee-helpers/${project.artifactId}/;publish=1</url>
+        </repository>
+    </distributionManagement>
+    <licenses>
+        <license>
+            <name>Apache License 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <scm>
+        <developerConnection>scm:git:https://github.com/t1/${project.artifactId}</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
 
     <build>
         <defaultGoal>install</defaultGoal>
@@ -51,7 +74,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
-                        <version>3.2.0</version>
+                        <version>3.1.0</version>
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
