--- a/ri-lib/pom.xml
+++ b/ri-lib/pom.xml
@@ -2,7 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.t1</groupId>
+    <parent>
+        <groupId>com.github.t1</groupId>
+        <artifactId>problem-details</artifactId>
+        <version>1.0.1-SNAPSHOT</version>
+    </parent>
+
     <artifactId>problem-details-ri-lib</artifactId>
     <version>1.0.1-SNAPSHOT</version>
     <description>Code to be reused by jax-rs as well as spring impls</description>
