--- a/ri-spring/pom.xml
+++ b/ri-spring/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.github.t1</groupId>
     <artifactId>problem-details-ri-spring</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.6</version>
     <description>Problem Detail implementation for Spring Boot</description>
 
     <properties>
@@ -60,12 +60,12 @@
         <dependency>
             <groupId>com.github.t1</groupId>
             <artifactId>problem-details-api</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>1.0.6</version>
         </dependency>
         <dependency>
             <groupId>com.github.t1</groupId>
             <artifactId>problem-details-ri-lib</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>1.0.6</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -92,4 +92,8 @@
             <version>2.1.1</version>
         </dependency>
     </dependencies>
+
+  <scm>
+    <tag>1.0.6</tag>
+  </scm>
 </project>
