--- a/ri-lib/pom.xml
+++ b/ri-lib/pom.xml
@@ -115,7 +115,7 @@
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-core-spi</artifactId>
+            <artifactId>resteasy-core</artifactId>
             <version>4.4.2.Final</version>
             <scope>test</scope>
         </dependency>
