build adr toc only when adr is installed

--- a/ri/pom.xml
+++ b/ri/pom.xml
@@ -34,28 +34,6 @@
                     </includes>
                 </configuration>
             </plugin>
-            <plugin>
-                <artifactId>exec-maven-plugin</artifactId>
-                <groupId>org.codehaus.mojo</groupId>
-                <version>1.6.0</version>
-                <executions>
-                    <execution>
-                        <id>build ADR TOC</id>
-                        <phase>generate-test-resources</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>adr</executable>
-                            <arguments>
-                                <argument>generate</argument>
-                                <argument>toc</argument>
-                            </arguments>
-                            <outputFile>doc/adr/toc.md</outputFile>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
 
@@ -170,4 +148,41 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>adr</id>
+            <activation>
+                <file>
+                    <exists>/usr/local/bin/adr</exists>
+                </file>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <version>1.6.0</version>
+                        <executions>
+                            <execution>
+                                <id>build adr toc</id>
+                                <phase>generate-test-resources</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>adr</executable>
+                                    <arguments>
+                                        <argument>generate</argument>
+                                        <argument>toc</argument>
+                                    </arguments>
+                                    <outputFile>doc/adr/toc.md</outputFile>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
