- use microprofile-sandbox:problem-details-api and tck - make ValidationFailedException nested - default status 500 <- 400 - log client-error on info when level = auto - add demo-form - don't build unnecessary javadoc

--- a/test/pom.xml
+++ b/test/pom.xml
@@ -17,8 +17,6 @@
     <description>Problem Detail test suite for JAX-RS</description>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
         <failOnMissingWebXml>false</failOnMissingWebXml>
 
@@ -38,6 +36,18 @@
         <defaultGoal>verify</defaultGoal>
         <finalName>${project.artifactId}</finalName>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
@@ -97,9 +107,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.t1</groupId>
+            <groupId>io.microprofile.sandbox</groupId>
             <artifactId>problem-details-api</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.t1</groupId>
