--- a/ri-lib/pom.xml
+++ b/ri-lib/pom.xml
@@ -76,9 +76,10 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.t1</groupId>
+            <groupId>io.microprofile.sandbox</groupId>
             <artifactId>problem-details-api</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
