--- a/ri/pom.xml
+++ b/ri/pom.xml
@@ -90,9 +90,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.t1</groupId>
+            <groupId>io.microprofile.sandbox</groupId>
             <artifactId>problem-details-api</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.t1</groupId>
