github action build

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -51,5 +51,9 @@ jobs:
       with:
         name: mp-problemdetails
         path: /home/runner/.m2/repository/io/microprofile/sandbox/
+    - name: Pre-fetch slf4j dependencies # required by jee-testcontainers
+      run: |
+        mvn --batch-mode dependency:get -Dartifact=org.slf4j:slf4j-api:1.7.30:jar
+        mvn --batch-mode dependency:get -Dartifact=org.slf4j:slf4j-jdk14:1.7.30:jar
     - name: Build with Maven
       run: mvn --batch-mode install -Djee-testcontainer=${{ matrix.container }}
