--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,7 +31,7 @@ jobs:
         container:
         - wildfly
         - open-liberty:full
-        #- payara # TODO Payara run with Microprofile support
+        #- payara # TODO Payara run with Microprofile support https://github.com/t1/problem-details/issues/25
         #- tomee # TODO TomEE enable when fixed https://github.com/t1/problem-details/issues/17
         jdk: [8, 11]
 
