--- a/jaxrs-tck/pom.xml
+++ b/jaxrs-tck/pom.xml
@@ -11,7 +11,7 @@
         <version>2.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>ri-tck</artifactId>
+    <artifactId>problem-details-jaxrs-tck</artifactId>
     <packaging>pom</packaging><!-- no classes for a jar -->
     <description>Launch the Problem Detail TCK for the RI</description>
 
@@ -41,9 +41,10 @@
                     </dependenciesToScan>
                     <systemPropertyVariables>
                         <problemdetails-tck-libs>
+                            <!-- these three are repeated below -->
                             urn:mvn:io.microprofile.sandbox:problem-details-api:${problemdetails.version}:jar
-                            urn:mvn:com.github.t1:problem-details-ri:${project.version}:jar
-                            urn:mvn:com.github.t1:problem-details-ri-lib:${project.version}:jar
+                            urn:mvn:com.github.t1:problem-details-jaxrs:${project.version}:jar
+                            urn:mvn:com.github.t1:problem-details-lib:${project.version}:jar
                         </problemdetails-tck-libs>
                     </systemPropertyVariables>
                     <!-- TODO don't skip this test but fix the RI -->
@@ -74,9 +75,10 @@
                         <configuration>
                             <systemPropertyVariables>
                                 <problemdetails-tck-libs>
+                                    <!-- these three are a repetition from above -->
                                     urn:mvn:io.microprofile.sandbox:problem-details-api:${problemdetails.version}:jar
-                                    urn:mvn:com.github.t1:problem-details-ri:${project.version}:jar
-                                    urn:mvn:com.github.t1:problem-details-ri-lib:${project.version}:jar
+                                    urn:mvn:com.github.t1:problem-details-jaxrs:${project.version}:jar
+                                    urn:mvn:com.github.t1:problem-details-lib:${project.version}:jar
                                     <!-- the slf4j dependencies are required only by some containers, but it doesn't hurt the others -->
                                     urn:mvn:org.slf4j:slf4j-api:${slf4j.version}:jar
                                     urn:mvn:org.slf4j:slf4j-jdk14:${slf4j.version}:jar
