--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -11,7 +11,7 @@
         <version>2.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>ri-demo</artifactId>
+    <artifactId>problem-details-jaxrs-demo</artifactId>
     <packaging>war</packaging>
     <description>Problem Detail demos for JAX-RS</description>
 
@@ -93,7 +93,7 @@
 
         <dependency>
             <groupId>com.github.t1</groupId>
-            <artifactId>problem-details-ri</artifactId>
+            <artifactId>problem-details-jaxrs</artifactId>
             <version>2.0.0-SNAPSHOT</version>
             <!-- if the client runs in a container: <scope>runtime</scope>-->
         </dependency>
