--- a/jaxrs/pom.xml
+++ b/jaxrs/pom.xml
@@ -11,7 +11,7 @@
         <version>2.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>problem-details-ri</artifactId>
+    <artifactId>problem-details-jaxrs</artifactId>
     <description>An implementation for JAX-RS using an ExceptionMapper</description>
 
     <build>
@@ -105,7 +105,7 @@
         </dependency>
         <dependency>
             <groupId>com.github.t1</groupId>
-            <artifactId>problem-details-ri-lib</artifactId>
+            <artifactId>problem-details-lib</artifactId>
             <version>2.0.0-SNAPSHOT</version>
         </dependency>
 
