--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -14,7 +14,7 @@
     </parent>
 
     <groupId>com.github.t1</groupId>
-    <artifactId>problem-details-ri-spring</artifactId>
+    <artifactId>problem-details-spring</artifactId>
     <version>2.0.0-SNAPSHOT</version>
     <description>Problem Detail implementation for Spring Boot</description>
 
@@ -62,7 +62,7 @@
         </dependency>
         <dependency>
             <groupId>com.github.t1</groupId>
-            <artifactId>problem-details-ri-lib</artifactId>
+            <artifactId>problem-details-lib</artifactId>
             <version>2.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
