--- a/test-spring/pom.xml
+++ b/test-spring/pom.xml
@@ -65,7 +65,7 @@
         </dependency>
         <dependency>
             <groupId>com.github.t1</groupId>
-            <artifactId>problem-details-ri-spring</artifactId>
+            <artifactId>problem-details-spring</artifactId>
             <version>2.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
@@ -73,7 +73,7 @@
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
             <version>2.1.1</version>
-            <scope>provided</scope><!-- by problem-details-ri-spring -->
+            <scope>provided</scope><!-- by problem-details-spring -->
         </dependency>
 
         <dependency>
